@@ -1,3 +1,8 @@
+2006-05-31  Ville Vainio  <vivainio@gmail.com>
+
+	* upgrade_dir.py, Magic.py (magic_upgrade): call upgrade_dir
+	with args in parens to work correctly with dirs that have spaces.
+
 2006-05-30  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/Logger.py (Logger.logstart): add option to log raw input
